project/stage/tests/accept/inclass.ul
void foo(boolean b){
  int x;
  x = 5;
  if(b){
    x = 9;
  }
  println x;
}

void main(){
}
