project/stage/tests/reject/type_mismatch.ul
void main(){
  int foo;
  char bar;
  foo = 1;
  bar = foo;
  bar = (5 == 5);
  bar = (5 + 5);
  bar = (5 - 5);
  bar = (5 < 5);
  bar = (5 * 5);
}